--- a/index.html
+++ b/index.html
@@ -19,58 +19,60 @@
     <div class="illustration">
       <img class="box-illustration" src="images/illustration-box-desktop.svg" alt="">
       <!-- <img class="main-illustration" src="images/illustration-woman-online-desktop.svg" alt=""> -->
+      <div class="illustration-mobile">
+        <img class="desktop" src="images/illustration-woman-online-mobile.svg" alt="">
+      </div>
       <div class="main-illustration"></div>
     </div>
-    <div class="illustration-mobile">
-      <img class="desktop" src="images/illustration-woman-online-mobile.svg" alt="">
-    </div>
     <section>
-      <h1>FAQ</h1>
-      <div class="questions-container">
-        <div class="questions">
-          <h2>How many team members can I invite?</h2>
-          <a class="toggle-answer" href="#"> <img src="images/icon-arrow-down.svg" alt="show button"> </a>
-        </div>
-        <div class="show-answer answer">
-          <p>You can invite up to 2 additional users on the Free plan. There is no limit on
-            team members for the Premium plan.</p>
-        </div>
-        </div>
+      <div class="faq">
+        <h1>FAQ</h1>
         <div class="questions-container">
           <div class="questions">
-            <h2>What is the maximum file upload size?</h2>
+            <h2>How many team members can I invite?</h2>
             <a class="toggle-answer" href="#"> <img src="images/icon-arrow-down.svg" alt="show button"> </a>
           </div>
           <div class="show-answer answer">
-            <p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
-          </div>
-        </div>
-        <div class="questions-container">
-          <div class="questions">
-            <h2>How do I reset my password?</h2>
-            <a class="toggle-answer" href="#"> <img src="images/icon-arrow-down.svg" alt="show button"> </a>
-          </div>
-          <div class="show-answer answer">
-            <p>Click “Forgot password” from the login page or “Change password” from your profile page.
-              A reset link will be emailed to you.</p>
-          </div>
-          </div>
-          <div class="questions-container">
-            <div class="questions">
-              <h2>Can I cancel my subscription?</h2>
-              <a class="toggle-answer" href="#"> <img src="images/icon-arrow-down.svg" alt="show button"> </a>
-            </div>
-            <div class="show-answer answer">
-              <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
+            <p>You can invite up to 2 additional users on the Free plan. There is no limit on
+              team members for the Premium plan.</p>
             </div>
           </div>
           <div class="questions-container">
             <div class="questions">
-              <h2>Do you provide additional support?</h2>
+              <h2>What is the maximum file upload size?</h2>
               <a class="toggle-answer" href="#"> <img src="images/icon-arrow-down.svg" alt="show button"> </a>
             </div>
             <div class="show-answer answer">
-              <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+              <p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
+            </div>
+          </div>
+          <div class="questions-container">
+            <div class="questions">
+              <h2>How do I reset my password?</h2>
+              <a class="toggle-answer" href="#"> <img src="images/icon-arrow-down.svg" alt="show button"> </a>
+            </div>
+            <div class="show-answer answer">
+              <p>Click “Forgot password” from the login page or “Change password” from your profile page.
+                A reset link will be emailed to you.</p>
+              </div>
+            </div>
+            <div class="questions-container">
+              <div class="questions">
+                <h2>Can I cancel my subscription?</h2>
+                <a class="toggle-answer" href="#"> <img src="images/icon-arrow-down.svg" alt="show button"> </a>
+              </div>
+              <div class="show-answer answer">
+                <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
+              </div>
+            </div>
+            <div class="questions-container">
+              <div class="questions">
+                <h2>Do you provide additional support?</h2>
+                <a class="toggle-answer" href="#"> <img src="images/icon-arrow-down.svg" alt="show button"> </a>
+              </div>
+              <div class="show-answer answer">
+                <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+              </div>
             </div>
           </div>
         </section>
