--- a/index.html
+++ b/index.html
@@ -78,6 +78,6 @@
         </section>
       </main>
       <!-- javascript -->
-      <script src="script.js" charset="utf-8"></script>
+      <script src="script.js"></script>
     </body>
     </html>
